stylesheets/home.css
.sun {
	aspect-ratio: 1;
	height: 96px;
	width: auto;
	position: fixed;
	top: calc(50vh - var(--sun-y) * 30vh - 60px);
	left: calc(50vw + var(--sun-x) * min(50vw, 448px));
	background: radial-gradient(circle, var(--sun-glow-color));
	box-shadow:
		0 0 50px var(--sun-glow-color),
		0 0 100px var(--sun-color),
		0 0 150px var(--sun-color);
	border-radius: 50%;
	filter: blur(1px);
	pointer-events: none;
	z-index: -1;
}

section,
footer {
	--border-radius: 34px;
	margin-block: 32px;
	padding: 18px 36px;
	border-radius: var(--border-radius);
	box-shadow:
		0px 4px 36px #00000030,
		inset 0 0 5px -4px white,
		inset 0 0 32px -24px #ffffff60;
	--filter: url(#glass);
	backdrop-filter: var(--filter);
	--webkit-backdrop-filter: var(--filter);
}

h1 {
	font-size: 32px;
	margin-block: 6px;
}

p,
label {
	font-size: 18px;
	text-shadow: 0 2px 2px #00000040;
}

.with-colon::after {
	content: ": ";
}

.svg-filter {
	position: absolute;
	visibility: hidden;
}

.input-container {
    display: flex;
	flex-direction: column;
	gap: 10px;
	text-align: center;
}

input,
select {
	font-size: 16px;
	font-family: inherit;
	color: inherit;
	padding: 5px 5px;
	background: #ffffff30;
	border: 1px solid #ffffff60;
	border-radius: 64px;
	box-shadow: 0px 4px 36px #00000030;
	accent-color: var(--sun-color);
	text-align: center;
}

input[type="number"] {
	width: 80px;
}

input[type="checkbox"] {
	--size: 29px;
	--padding: 4px;
	width: calc(var(--size) * 2);
	height: var(--size);
	margin: 0;
	margin-right: 6px;
	padding: 0;
	position: relative;
	border-radius: var(--size);
	vertical-align: middle;
	box-sizing: content-box;
	cursor: pointer;
	appearance: none;
	transition: 0.3s;
}

input[type="checkbox"]::before {
	content: '';
	width: calc(var(--size) - var(--padding) * 2);
	aspect-ratio: 1;
	position: absolute;
	top: var(--padding);
	left: var(--padding);
	background-color: white;
	border-radius: 50%;
	filter: drop-shadow(0 0 2px black);
	transition: 0.2s ease-in;
}

input[type="checkbox"]:checked {
	background-color: var(--sun-color);
	box-shadow:
		0 0 70px var(--sun-color),
		0 0 12px var(--sun-color);
	transition: 0.8s;
}

input[type="checkbox"]:checked::before {
	translate: var(--size);
	background-color: var(--sun-glow-color);
}

.select-container {
	display: inline-block;
}

.select-container::before {
	content: ": ";
}

.select-container.hidden {
	display: none;
}

select {
	width: 102px;
	cursor: pointer;
}

h2 {
	font-size: 24px;
	margin-block: 14px;
}

.table-container {
	width: 100%;
	overflow-x: auto;
}

table {
	font-size: 17px;
	width: 100%;
	margin-block: 12px;
	background: #00000080;
	border-radius: 4px;
	border-collapse: collapse;
	text-wrap: nowrap;
}

th,
tr:last-child {
	font-weight: 900;
	text-align: left;
}

th,
td {
	padding: 8px 10px;
}

td {
	transition: 1s;
}

tr.highlight.glow-anim {
	background: linear-gradient(
		90deg, transparent 43%,
		color-mix(in srgb, var(--sun-glow-color) 30%, transparent),
		transparent 57%
	);
	background-size: 200% 100%;
	background-position: 110% 0;
	animation: glow 0.6s forwards ease-in-out;
}

@keyframes glow {
	0% {
		background-position: 114% 0;
	}
	50% {
		box-shadow: 0 0 128px color-mix(in srgb, var(--sun-color) 20%, transparent) inset;
	}
	100% {
		background-position: -14% 0;
	}
}

tr.highlight td:first-child {
	color: var(--sun-color);
	filter: drop-shadow(0 0 8px var(--sun-color));
}

tr:hover {
	background: #ffffff20;
}


footer {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
}

footer p {
	font-size: 18px;
	margin: 7px auto;
}

.footer-link {
	color: inherit;
	opacity: 0.8;
	transition: 0.1s;
}

.footer-link:hover {
	opacity: 1;
}

.copyright {
	display: inline-block;
	opacity: 0.6;
}

@media screen and (max-width: 604px) {
	h1 {
		font-size: 26px;
	}

	p,
	li {
		font-size: 16px;
	}

	section,
	footer {
		--border-radius: 28px;
		margin: 18px 10px;
		padding: 13px 22px;
	}

	.input-container {
		gap: 18px;
	}

	input,
	select {
		font-size: 14px;
		padding: 4px 6px;
	}

	input[type="number"] {
		width: 72px;
	}

	input[type="checkbox"] {
		--size: 24px;
		--padding: 3px;
		padding: 0;
	}

	.select-container {
		display: block;
	}

	.select-container::before {
		content: "";
	}

	select {
		width: 94px;
	}

	h2 {
		font-size: 23px;
		margin-block: 12px;
	}

	table {
		font-size: 14px;
		margin-block: 12px;
	}

	th,
	td {
		padding: 8px 10px;
	}

	footer {
		justify-content: center;
		flex-wrap: wrap;
	}

	footer p {
		font-size: 16px;
		margin: 4px 10px;
	}
}

